--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     />
     <title>Frontend Mentor | Base Apparel coming soon page</title>
     <script src="app.js" defer></script>
-    <link rel="stylesheet" href="scss/main.css" />
+    <link
+      rel="stylesheet"
+      href="/base-apparel-coming-soon-page/scss/main.css"
+    />
   </head>
   <body>
     <main class="main-section">
       <img
-        src="/images/logo.svg"
+        src="/base-apparel-coming-soon-page/images/logo.svg"
         alt="logo"
         class="logo"
         width="100"
@@ -48,7 +51,7 @@
 
             <button class="send-button">
               <img
-                src="/images/icon-arrow.svg"
+                src="/base-apparel-coming-soon-page/images/icon-arrow.svg"
                 alt="arrow icon"
                 class="arrow-icon"
                 width="12"
